fix overlapping labels, change points colors to be consistent blue

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1, h2, h3 {
 
 .vis-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
   width: 100%;
   height: 100%;
@@ -52,7 +52,7 @@ h1, h2, h3 {
 	border: 1px solid #ccc;
 	border-radius: 5px;
 	width: 160px;
-	color: black;
+	color: white;
 	height: 30px;
 	font-size: 12px;
 	text-decoration-color: white;
@@ -98,13 +98,13 @@ h1, h2, h3 {
 }
 
 .scatterplot-container {
-  width: 55%; /* Make scatter plot smaller */
+  width: 100%; /* Make scatter plot smaller */
   height: 100%;
   position: relative;
 }
 
 .bar-graphs-container {
-  width: 50%; /* Make bar graphs bigger */
+  width: 80%; /* Make bar graphs bigger */
   height: 80%; /* Adjust height to center vertically */
   display: flex;
   flex-direction: column;
@@ -135,8 +135,6 @@ circle.mouseover {
 
 circle.selected {
 	fill: green;
-	stroke: red;
-	stroke-width: 4px;
 	opacity: 5;
 }
 
